--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot \" \"cross-env nodemon mock/server.js \"",
+    "dev": "concurrently \"yarn dev:app\" \"yarn dev:mock\"",
+    "dev:app": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot",
+    "dev:mock": "cross-env nodemon mock/mock/index.ts",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config config/webpack.build.config.js --progress --hide-modules",
     "test": "cross-env node scripts/test.js",
     "lint": "yarn lint:eslint && yarn lint:style",
@@ -12,88 +14,106 @@
     "lint:fix": "yarn lint:eslint --fix && yarn lint:style --fix"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "^16.9.0",
-    "@sentry/browser": "^5.6.1",
-    "ant-design-pro": "^2.3.2",
-    "antd": "^3.21.4",
+    "@hot-loader/react-dom": "^16.11.0",
+    "@sentry/browser": "^5.10.1",
+    "@uifabric/experiments": "^7.18.9",
+    "@uifabric/icons": "^7.3.0",
+    "@uifabric/react-cards": "^0.109.1",
     "axios": "^0.19.0",
     "debug": "^4.1.1",
+    "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
+    "office-ui-fabric-react": "^7.70.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.2",
-    "react-async-component": "^2.0.0",
-    "react-dev-utils": "^9.0.2",
-    "react-dom": "^16.9.0",
-    "react-hot-loader": "^4.12.11",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.4",
-    "redux-devtools": "^3.5.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "rxjs": "^6.5.2"
+    "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.5",
+    "react-dev-utils": "^10.0.0",
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18",
+    "react-imported-component": "^6.2.1",
+    "react-intersection-observer": "^8.25.2",
+    "react-keep-alive": "^2.5.2",
+    "react-router-dom": "^5.1.2",
+    "rxjs": "^6.5.3",
+    "rxjs-hooks": "^0.5.2",
+    "ts-node": "^8.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.7.1",
+    "@secto-sessions/dev": "^0.2.1",
     "@svgr/webpack": "^4.3.2",
     "@types/debug": "^4.1.5",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/express": "^4.17.0",
+    "@types/express-jwt": "^0.0.42",
     "@types/jest": "^24.0.17",
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.1",
     "@types/numeral": "^0.0.26",
-    "@types/react": "^16.9.1",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-redux": "^7.1.1",
-    "@types/react-router-dom": "^4.3.4",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "babel-eslint": "10.0.2",
-    "babel-jest": "^24.8.0",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/react-test-renderer": "^16.9.1",
+    "@types/sinon": "^7.5.0",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "autoprefixer": "^9.6.5",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.3",
-    "babel-preset-react-app": "^9.0.1",
+    "babel-preset-react-app": "^9.0.2",
     "body-parser": "^1.19.0",
+    "cache-loader": "^4.1.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "concurrently": "^4.1.1",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "dotenv": "^8.0.0",
-    "dotenv-expand": "^4.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-loader": "^2.2.1",
+    "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.6.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "file-loader": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^7.0.1",
     "happypack": "^5.0.1",
-    "html-webpack-plugin": "^4.0.0-beta.5",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "identity-obj-proxy": "^3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
-    "less": "^3.9.0",
+    "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "morgan": "^1.9.1",
+    "node-gyp": "^6.0.1",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -101,23 +121,28 @@
     "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.1",
+    "precss": "^4.0.0",
+    "react-test-renderer": "^16.9.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.2.0",
+    "sass-loader": "^8.0.0",
+    "scss": "^0.2.4",
     "semver": "6.3.0",
+    "sinon": "^7.5.0",
     "style-loader": "^1.0.0",
-    "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.3.0",
+    "stylelint": "^12.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "supertest": "^4.0.2",
     "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.3",
-    "url-loader": "2.1.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.1",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.7.2",
+    "url-loader": "2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2",
     "workbox-webpack-plugin": "4.3.1"
   },
   "eslintConfig": {
