--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,50 @@
       "dom.iterable",
       "esnext"
     ],
+    "paths": {
+      "~api/*": [
+        "./api/*"
+      ],
+      "~type": [
+        "../types"
+      ],
+      "~type/*": [
+        "../types/*"
+      ],
+      "~component": [
+        "./components"
+      ],
+      "~component/*": [
+        "./components/*"
+      ],
+      "~data/*": [
+        "./data/*"
+      ],
+      "~store": [
+        "./store"
+      ],
+      "~store/*": [
+        "./store/*"
+      ],
+      "~style": [
+        "./style"
+      ],
+      "~style/*": [
+        "./style/*"
+      ],
+      "~util": [
+        "./utils"
+      ],
+      "~util/*": [
+        "./utils/*"
+      ],
+      "~view": [
+        "./views"
+      ],
+      "~view/*": [
+        "./views/*"
+      ]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,8 +63,5 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react"
-  },
-  "include": [
-    "src"
-  ]
+  }
 }
