--- a/tsconfig.mock.json
+++ b/tsconfig.mock.json
@@ -11,7 +11,8 @@
     "noImplicitAny": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "isolatedModules": true
   },
   "exclude": [
     "node_modules",
