--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"yarn dev:app\" \"yarn dev:mock\"",
     "dev:app": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot",
-    "dev:mock": "cross-env nodemon mock/mock/index.ts",
+    "dev:mock": "cross-env nodemon mock/mock/server.ts",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config config/webpack.build.config.js --progress --hide-modules",
     "test": "cross-env node scripts/test.js",
     "lint": "yarn lint:eslint && yarn lint:style",
