--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "numeral": "^2.0.6",
     "office-ui-fabric-react": "^7.70.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^0.0.0-experimental-f42431abe",
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^0.0.0-experimental-f42431abe",
     "react-hot-loader": "^4.12.18",
     "react-imported-component": "^6.2.1",
     "react-intersection-observer": "^8.25.2",
@@ -136,9 +136,9 @@
     "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.2.0",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.4",
     "url-loader": "2.2.0",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.4",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0",
     "webpack-manifest-plugin": "^2.2.0",
