feat: using parcel to build project

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "liber-rad",
+  "name": "liberad",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "concurrently \"yarn dev:app\" \"yarn dev:mock\"",
-    "dev:app": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.config.js --hot",
+    "dev:app": "cross-env NODE_ENV=development parcel index.html",
     "dev:mock": "cross-env nodemon mock/mock/server.ts",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config config/webpack.build.config.js --progress --hide-modules",
     "test": "cross-env node scripts/test.js",
     "lint": "yarn lint:eslint && yarn lint:style",
     "lint:eslint": "eslint --ext .jsx,.js,.ts,.tsx src",
@@ -46,8 +45,6 @@
     "@secto-sessions/dev": "^0.2.1",
     "@svgr/webpack": "^5.0.0",
     "@types/debug": "^4.1.5",
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/express": "^4.17.2",
     "@types/express-jwt": "^0.0.42",
     "@types/jest": "^24.0.17",
@@ -69,9 +66,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.0.2",
     "body-parser": "^1.19.0",
-    "cache-loader": "^4.1.0",
     "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "concurrently": "^4.1.1",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
@@ -79,8 +74,6 @@
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.0.2",
     "eslint-config-standard": "^14.1.0",
@@ -95,12 +88,8 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^7.0.1",
     "happypack": "^5.0.1",
-    "html-webpack-plugin": "^4.0.0-beta.11",
-    "identity-obj-proxy": "^3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "^24.9.0",
     "jest-css-modules": "^2.1.0",
@@ -109,23 +98,17 @@
     "jest-watch-typeahead": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
     "less": "^3.10.3",
-    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "morgan": "^1.9.1",
     "node-gyp": "^6.0.1",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.1",
     "precss": "^4.0.0",
-    "react-test-renderer": "^16.9.0",
-    "resolve": "1.12.0",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^8.0.0",
     "scss": "^0.2.4",
     "semver": "6.3.0",
     "sinon": "^7.5.0",
@@ -133,17 +116,8 @@
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.7.4",
-    "url-loader": "2.2.0",
-    "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.2",
-    "workbox-webpack-plugin": "4.3.1"
+    "typescript": "^3.7.4"
   },
   "eslintConfig": {
     "extends": "react-app"
