--- a/mock/Cargo.toml
+++ b/mock/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 actix-rt = "1.0.0"
 actix-web = "2.0.0"
+env_logger = "0.7.1"
 futures = "0.3.1"
 serde = "1.0.104"
 serde_json = "1.0.44"
