--- a/mock/package.json
+++ b/mock/package.json
@@ -6,7 +6,15 @@
   },
   "dependencies": {
     "cross-env": "^6.0.3",
+    "debug": "^4.1.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "mongoose": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/graphql": "^14.5.0",
+    "@types/mongoose": "^5.5.36",
+    "@types/node": "^13.1.1"
   }
 }
